--- a/Laba3/style.css
+++ b/Laba3/style.css
@@ -233,6 +233,7 @@ background-color: #dddbdb;
     min-height: 500px;
     background:#ebebeb;
     margin: 0 30px 0;
+    flex:25%;
 }
 .blog__item:hover{
 
@@ -344,13 +345,139 @@ text-align: center;
     .blocks{
         flex:50%;
     }
+
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 480px){
+    .OUR__works{
+        min-height: 400px;
+    }
+    .Our_skills{
+        min-width: 480px;
+        min-height: 300px;
+    }
+    #UL{
+        font-size: 20px;
+    }
     .col{
         flex:100%;
     }
     .blocks{
         flex:100%;
     }
+}
+@media screen and (max-width: 700px){
+    .header{
+        width: 100%;
+    }
+    .nav{
+        display: flex;
+    }
+    .col{
+        flex:100%;
+    }
+    .blocks{
+        flex:100%;
+    }
+}
+@media screen and (max-width: 600px){
+
+    #fourghtheader{
+        font-size: 40px;
+    }
+    .OUR__works{
+        min-height: 400px;
+    }
+    .Our_skills{
+        min-width: 480px;
+        min-height: 300px;
+    }
+    #UL{
+        font-size: 20px;
+    }
+    .header{
+        width: 100%;
+        max-width: 610px;
+    }
+    .container{
+        max-width: 610px;
+        max-height: 800px;
+    }
+    .blogs{
+        display: flex;
+        flex: 100%;
+
+    }
+    .blog__text{
+        font-size: 20px;
+    }
+    .blog__item{
+        width: 100px;
+        font-size: 20px;
+    }
+    .p{
+        font-size: 40px;
+    }
+    .About__us_par{
+        font-size: 20px;
+    }
+    .Our_skills{
+        max-width: 380px;
+        margin: 0 auto;
+    }
+    .UL{
+        max-width: 380px;
+    }
+    .img1{
+        width: 100%;
+    }
+    #firstheader{
+        font-size: 20px;
+    }
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        font-size: 20px;
+    }
+    .col{
+        max-width: 150px;
+
+    }
+    #secondheader{
+        font-size: 20px;
+    }
+    #thirdheader{
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 380px){
+    .header{
+        width: 100%;
+        max-width: 380px;
+    }
+    .p{
+        font-size: 40px;
+    }
+    .About__us_par{
+        font-size: 20px;
+    }
+    .Our_skills{
+        max-width: 380px;
+        margin: 0 auto;
+    }
+    .UL{
+        max-width: 380px;
+    }
+    .img1{
+        width: 100%;
+    }
+    #firstheader{
+        font-size: 20px;
+    }
+    .nav{
+        display: flex;
+        justify-content: space-between;
+        font-size: 15px;
+    }
+
 }
